* 2013-09-10 - thorben.betten@open-xchange.com

 - Fix for bug 28786: Honor possibly absent service during runtime
 - Fix for bug 28741: Orderly close opened 'Base64OutputStream'
 
* 2013-09-10 - martin.schneider@open-xchange.com
 
 - Fix for bug 28759, start parsing css with correct matched character

* 2013-09-09 - martin.schneider@open-xchange.com

 - Fix for bug 28261: Command line tool 'createcontext' returns proper information if 'user' parameter is set inadequate.
 - Fix for bug 26693: Return clear error message when folder name is too long.

* 2013-09-09 - thorben.betten@open-xchange.com

 - Fix for bug 28745: User proper charset encoding when generating user's vCard

* 2013-09-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 28734: Upgraded iCal4j library to version 1.0.4. 

* 2013-09-06 - dennis.sieben@open-xchange.com

 - Fix for bug 28736: Now using File.createTempFile for temp files

* 2013-09-05 - martin.herfurth@open-xchange.com

 - Fix for bug 28715: Bad conflict handling on recurrence exception creation.

* 2013-09-06 - dennis.sieben@open-xchange.com

 - Fix for bug 28430: Start a second parser run if the first one doesn't deliver the user database part

* 2013-09-06 - thorben.betten@open-xchange.com

 - Fix for bug 28718: Sanitize possible passwords from logged SOAP payloads
 - Fix for bug 23491: Removed FOREIGN KEY specifications from initial CREATE TABLE statements, too
 - Fix for bug 28624: Fixed possible NPE when putting preview image into cache
 - Fix for bug 28729: More robust handling of upload event
 - Fix for bug 28737: Assume default sort field if null is passed
 - Fix for bug 28726: Removed error-prone custom handling of interrupted threads
                      (acquiring stack trace from an interrupted thread seems to stall the caller)

* 2013-09-06 - martin.schneider@open-xchange.com

 - Fix for bug 28152: Return correct error messages for 'deletepublication' and 'getpublication' command-line tool 
