@@ -1,3 +1,7 @@
+* 2013-09-12 - thorben.betten@open-xchange.com
+
+ - Fix for bug 28828: Consider string length when iterating over its characters
+
 * 2013-09-10 - thorben.betten@open-xchange.com
 
  - Fix for bug 28786: Honor possibly absent service during runtime
